--- a/README.org
+++ b/README.org
@@ -88,13 +88,13 @@
          )
     #+end_src
 *** =pipenv=
-    - install
+    - spawn a shell in a virtual environment
       : $ cd <your project root>
+      : $ pipenv shell --python 3.6
+    - install
       : $ pipenv install autoflake flake8 epc importmagic 'python-language-server[all]' 'ptvsd>=4.2'
       : $ pipenv install <python library needed by your project>
-    - activate
-      : $ pipenv shell
-    * execute
+    - execute
       : $ pipenv run python main.py
 
   That's it. Open a file in your project, emacs will automagically start lsp/pyls.
