--- a/README.org
+++ b/README.org
@@ -66,12 +66,19 @@
 ** python lsp layer
    Ok, now the world is moving towards [[https://langserver.org][Language Server Protocol]], so are we :)
 
-*** install =pipenv= system-wide
-    : $ port install pipenv
+*** install =pipenv=
+    - macports (system-wide)
+      : $ port install pipenv
+    - debian (virtualenv as system-wide, pipenv as user local)
+      : $ pip3 install virtualenv
+      : $ pip3 install --user pipenv
 *** =.basrc=
     : # pipenv will now place the virtualenv inside the project folder
     : # emacs will see it and activate it
     : export PIPENV_VENV_IN_PROJECT=1
+    :
+    : # debian pipenv install here
+    : PATH=~/.local/bin:${PATH}
 *** =.spacemacs=
     #+begin_src emacs-lisp :tangle yes
       dotspacemacs-configuration-layers
